# AI-Course-SMIT

./: README.md
Data Bases/Mongo db/: .env  main.py  pyproject.toml
Data Bases/PostgressSQL/: .env  alembic.ini  main.py  pyproject.toml  readme.txt
Data Bases/PostgressSQL/alembic/: env.py
Data Bases/PostgressSQL/alembic/versions/: 437cc45dfd24_create_table_and_make_relationship_with_.py  4affa5e2151f_change_the_table_name_and_delete_one_tow.py  6a1c28bba947_create_todos_table.py  a79c4eecda2c_create_table_and_make_relationship_with_.py  d2626a676d7a_add_new_column_completed_in_todo_table.py
Data Bases/PostgressSQL/config/: database.py
Data Bases/PostgressSQL/models/: todo_model.py
FastAPI/again/: main.py  pyproject.toml
FastAPI/class/: main.py  pyproject.toml
FastAPI/fast_project/: pyproject.toml
FastAPI/fast_project/fast_project/: main.py
FastAPI/new_project/: pyproject.toml
FastAPI/practice_project/: main.py  new.py  pyproject.toml
OpenCV/: opencv.md  opencv.py  pyproject.toml
Pandas/: file.py  pyproject.toml  readme.txt
Python/Assignment No. 1/Practice/: hello.py
