[project]
name = "sql"
version = "0.1.0"
description = ""
authors = [
    {name = "Adeel",email = "adeelwaraich27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pymongo (>=4.11.2,<5.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
