[project]
name = "new-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Adeel",email = "adeelwaraich27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "package-name (>=0.1,<0.2)",
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
